# phokimo

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  simple_tree_no_labels
docs/: conf.py  index.rst
docs/_autosummary/: phokimo.src.io.terachem.rst  phokimo.src.ode_builder.rst  phokimo.src.rate_constants.rst  phokimo.src.rst  phokimo.src.terachem_values.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_autosummary/: phokimo.doctree  phokimo.src.additioanl_graphing.doctree  phokimo.src.doctree  phokimo.src.io.doctree  phokimo.src.io.terachem.doctree  phokimo.src.ode_builder.doctree  phokimo.src.rate_constants.doctree  phokimo.src.terachem_values.doctree  phokimo.src.toml_reader.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_autosummary/: phokimo.html  phokimo.src.additioanl_graphing.html  phokimo.src.html  phokimo.src.io.html  phokimo.src.io.terachem.html  phokimo.src.ode_builder.html  phokimo.src.rate_constants.html  phokimo.src.terachem_values.html  phokimo.src.toml_reader.html
docs/_build/html/_sources/_autosummary/: phokimo.rst.txt  phokimo.src.additioanl_graphing.rst.txt  phokimo.src.io.rst.txt  phokimo.src.ode_builder.rst.txt  phokimo.src.rate_constants.rst.txt  phokimo.src.rst.txt  phokimo.src.toml_reader.rst.txt
phokimo/: __init__.py  __main__ new.py  __main__.py  mechanism.py  mechanism_diagram.py  test.py
phokimo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phokimo/independent visualization/: energy_plot.py  mechanism_graph.py  temporaryfigure.py
phokimo/mechanism/: __init__.py  __main__.py
phokimo/src/: __init__.py  additioanl_graphing.py  additional_functions.py  additional_graphing.py  graph_builder.py  ode_builder.py  rate_constants.py  terachem_values.py  toml_reader.py
phokimo/src/io/: __init__.py  terachem.py
